--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ div.button {
     text-align: right;
 }
 .btn {
-  background: #4caf50;
+  background: #f7ec9a;
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
