--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     margin-top: 30px;
 }
 div.container {
-    background: #f7ec9a;
+    background-color: #f7ec9a;
     width: 50%;
     margin: auto;
     border: 1px solid gray;
@@ -24,13 +24,13 @@ div.button {
     text-align: right;
 }
 .btn {
-  background: #f7ec9a;
+  background-color: #f7ec9a;
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
   color: white;
 }
 .btn:hover {
-  background: #3e8e41;
+  background-color: #3e8e41;
   text-decoration: none;
 }
