--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ div.button {
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
-  color: white;
+  color: black;
 }
 .btn:hover {
   background-color: #3e8e41;
