--- a/index.css
+++ b/index.css
@@ -3,10 +3,8 @@ header {
 }
 body {
     margin-top: 30px;
-    color: #f7ec9a;
 }
 div.container {
-    background-color: #f7ec9a;
     width: 50%;
     margin: auto;
     border: 1px solid gray;
@@ -25,13 +23,13 @@ div.button {
     text-align: right;
 }
 .btn {
-  background-color: #f7ec9a;
+  background: #4caf50;
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
-  color: black;
+  color: white;
 }
 .btn:hover {
-  background-color: #3e8e41;
+  background: #3e8e41;
   text-decoration: none;
 }
