--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ div.button {
     text-align: right;
 }
 .btn {
-  background: #4caf50;
+  background: black;
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
