--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ div.button {
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
-  color: white;
+  color: red;
 }
 .btn:hover {
   background: #3e8e41;
