--- a/index.css
+++ b/index.css
@@ -23,11 +23,11 @@ div.button {
     text-align: right;
 }
 .btn {
-  background: black;
+  background: #4caf50;
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   text-decoration: none;
-  color: red;
+  color: white;
 }
 .btn:hover {
   background: #3e8e41;
