--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ div.field-value {
 div.button {
     padding-top: 20px;
     padding-bottom: 20px;
-    text-align: right;
+    text-align: center;
 }
 .btn {
   background: #4caf50;
