--- a/index.css
+++ b/index.css
@@ -5,11 +5,28 @@ body {
     margin-top: 30px;
 }
 div.circle {
-    background: #f7ec9a;
-    width: 50%;
-    margin: auto;
-    border: 1px solid gray;
-    padding: 30px;
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 0;
+  padding: 50% 0;
+  border-radius: 50%;
+  color: black;
+  font-family: Helvetica, Arial Black, sans;
+  font-size: 16px;
+  text-align: center;
+  vertical-align: center;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  display: inline-block;
+  width: 60%;
+  height: 10%;
+  padding: 30% 0;
+  background: #f7ec9a;
+  box-shadow: 0px 0px 0px 10px #99bd4f, 0px 0px 0px 20px #7ba237, 0px 0px 0px 30px #2d5109;
+  margin: 50px;
+  
 }
 div.panel {
     padding-top: 10px;
@@ -21,7 +38,7 @@ div.field-value {
 div.button {
     padding-top: 20px;
     padding-bottom: 20px;
-    text-align: center;
+    text-align: right;
 }
 .btn {
   background: #4caf50;
